[package]
name = "rust-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"] }
sha2 = "0.10.3"
serde_json = "1.0.85"
chrono = "0.4.22"
crossbeam = "0.8.2"
num_cpus = "1.13.1"
log = "0.4.17"
pretty_env_logger = "0.4.0"