[package]
name = "rust-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"] }
sha2 = "0.10.3"
serde_json = "1.0.85"
chrono = "0.4.22"
crossbeam = "0.8.2"
num_cpus = "1.13.1"
log = "0.4.17"
tracing = "0.1.36"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.15"
tracing-bunyan-formatter = "0.3.3"
libp2p = "0.43.0"
futures = "0.3.21"
async-std = { version = "1.10.0", features = ["attributes"] }
once_cell = "1.14.0"